syntax = "proto3";

message AuthzMessage {
  string nonce = 1;
  repeated string roles = 2;
}

message LastAuthMessage {
  string nonce = 1;
  string lastAuthAt = 2;
}
