syntax = "proto3";

message AuthnMessage {
  string nonce = 1;
  string authAt = 2;
}

message AuthzMessage {
  string nonce = 1;
  repeated string roles = 2;
}
