syntax = "proto3";

message ApiCredentialMessage {
  string nonce = 1;
  repeated string roles = 2;
}
